fix vocab errors

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,5 +1,5 @@
 This project investigates the combinatorial structure of the \textsc{PureCircuit} problem.
 We conjecture that its circuit-based formulation can provide insights and bounds on the counting complexity of \textsc{PPAD-1}.
 In this report, we present the progress made so far, including preliminary results and ongoing developments.
-In addtion, we report on the construction of a visualisation tool designed to support the exploration and formulation of these combinatorial theorems.
+In addition, we report on the construction of a visualisation tool designed to support the exploration and formulation of these combinatorial theorems.
 Lastly we outline the current state of the project and describe our intended next steps.
