--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -42,7 +42,7 @@ as well as developing a software to visualise its instances.
     \item Demonstrate that $\textsc{\#PureCircuit}- 1 \not\subseteq \textbf{\#P}$ either by:
         \begin{enumerate}
             \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#PureCircuit}$ for some $k \in \mathbb{N}_{\geq 2}$
-            \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#nD-StongSperner}$ for some $k,n \in \mathbb{N}_{\geq 2}$ 
+            \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#nD-StrongSperner}$ for some $k,n \in \mathbb{N}_{\geq 2}$ 
         \end{enumerate}
     \item Prove or disprove the following:
 \[
@@ -69,7 +69,7 @@ the current ones as well as general reflections.
 Our main objectives revolve around the conjecture in \ref{conj:ppad-1-hardness}, where
 we investigate the boundaries of $\scn{\#PPAD}-1$ with the help of the \textsc{PureCircuit} problem.
 \begin{conjecturebox}{$\scn{\#PPAD}-1$ hardness}{ppad-1-hardness}
-    Every lanaguage in \scn{PPAD} can be parsimoniously reduced up to some polynomial factor, to the
+    Every language in \scn{PPAD} can be parsimoniously reduced up to some polynomial factor, to the
     \textsc{PureCircuit} problem, or more formally:
     $$
     \forall L \in \scn{PPAD}, \exists f \in n^{O(1)}: 
