--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -3,7 +3,7 @@
 For the remaining duration, we will focus on three main objectives:
 One will be to demonstrate that, the \textit{bipolar} colouring
 of \textsc{nD-StrongSperner} will keep the reduction parsimonious.
-Second, will be to demonstrate hardness over \textsc{\#P} class either by findning
+Second, will be to demonstrate hardness over \textsc{\#P} class either by finding
 reductions from the \textsc{SourceOrExcess} problem.
 And lastly, we will be to generalise our reduction to all $\#PPAD$ problems.
 
@@ -27,6 +27,6 @@ of the project.
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.85\textwidth]{assets/Interim Gantt 20250708.pdf}
-    \caption{Updated gantt chart}\label{fig:gantt-new}
+    \caption{Updated Gantt chart}\label{fig:gantt-new}
 \end{figure}
 
